--- a/week 1/1_struktur_dasar.html
+++ b/week 1/1_struktur_dasar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Belajar Identifikasi Elemen HTML</title>
+    <title>Belajar Identifikasi Elemen HTML</title> 
   </head>
   <body>
     <h1>Identifikasi Elemen HTML</h1>
@@ -11,6 +11,8 @@
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+
     
     <h2>Elemen Paragraph</h2>
     <p>Ini adalah contoh paragraf.</p>
@@ -19,9 +21,9 @@
     <a href="https://www.google.com">Ini adalah link ke Google</a>
     
     <h2>Elemen Gambar</h2>
-    <img src="https://developers.google.com/community/gdsc/images/gdsc-social-share.png" alt="Ini adalah gambar">
+    <!-- <img src="https://resource.logitech.com/w_386,ar_1.0,c_limit,f_auto,q_auto,dpr_2.0/d_transparent.gif/content/dam/logitech/en/products/mice/m171/gallery/m171-mouse-top-view-bluegrey.png?v=1" alt="Ini adalah gambar"> -->
 
-    <!-- <img src="GDSC.png" alt="Ini adalah gambar"> -->
+    <img src="./img/GDSC.png" alt="Ini adalah gambar"> 
 
   </body>
 </html>
