--- a/week 1/2_form.html
+++ b/week 1/2_form.html
@@ -7,7 +7,7 @@
     <title>Latihan Form</title>
   </head>
   <body>
-    <form action="proses.php" method="POST">
+    <form action="" method="POST">
       <fieldset>
         <legend>Formulir Kontak</legend>
         <label for="nama">Nama:</label>
@@ -17,7 +17,7 @@
         <input type="email" id="email" name="email" required />
 
         <label for="pesan">Pesan:</label>
-        <textarea id="pesan" name="pesan" required></textarea>
+        <textarea id="pesan" name="pesan"  required></textarea>
 
         <button type="submit">Kirim</button>
       </fieldset>
