--- a/week 1/3_table.html
+++ b/week 1/3_table.html
@@ -26,6 +26,10 @@
           <td>Jane Doe</td>
           <td>Jl. In aja dlu No. 123</td>
         </tr>
+        <tr>
+          <td>2</td>
+          <td>Jane Doe</td>
+        </tr>
       </tbody>
     </table>
   </body>
