--- a/week 2/2_konsep css/1_selector.html
+++ b/week 2/2_konsep css/1_selector.html
@@ -3,9 +3,9 @@
   <head>
     <title>Document</title>
     <style>
-      h1 {
+      /* h1 {
         background-color: red;
-      }
+      } */
 
       /* .highlight {
         background-color: yellow;
@@ -31,6 +31,10 @@
       /* #one {
         background-color: green;
       } */
+
+      p span{
+        background-color: red;
+      }
     </style>
   </head>
   <body>
