--- a/week 2/2_konsep css/2_attribute.html
+++ b/week 2/2_konsep css/2_attribute.html
@@ -3,13 +3,13 @@
   <head>
     <title>Document</title>
     <style>
-      li[class] {
+      /* li[class] {
         background-color: green;
-      }
-
-      /* li[class="a"] {
-        background-color: yellow;
       } */
+
+      li[class="a"] {
+        background-color: yellow;
+      }
     </style>
   </head>
   <body>
