--- a/week 2/2_konsep css/3_pseudo.html
+++ b/week 2/2_konsep css/3_pseudo.html
@@ -18,12 +18,13 @@
       /* article p::first-line {
         font-size: 120%;
         font-weight: bold;
+        color:red;
       } */
 
       /* combine pseudo class and element */
-      /* article p:first-child::first-line {
+      article p:first-child::first-line {
         background-color: green;
-      } */
+      }
 
       /* generating content with before and after */
       /* .box::before {
@@ -43,6 +44,10 @@
     <article>
       <p class="first">
         Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh
+        onion daikon amaranth tatsoi tomatillo melon azuki bean garlic. 
+        Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh
+        onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
+        Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh
         onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
       </p>
 
@@ -50,6 +55,8 @@
         Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot
         courgette tatsoi pea sprouts fava bean collard greens dandelion okra
         wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.
+        <br>
+        test
       </p>
       <p><a href="">Hover over me</a></p>
 
