--- a/week 2/2_konsep css/4_combinator.html
+++ b/week 2/2_konsep css/4_combinator.html
@@ -4,14 +4,17 @@
     <title>Document</title>
     <style>
       /* Descendant combinator */
-      .box p {
+      /* .box p {
         color: red;
-      }
+      } */
 
       /* Child combinator */
-      ul > li {
+      /* ul > li {
         background-color: pink;
       }
+      li{
+        background-color: white;
+      } */
 
       /* Adjacent sibling combinator */
       div + p{
@@ -33,5 +36,7 @@
         </ol>
       </li>
     </ul>
+    <p>Text not in .box</p>
+
   </body>
 </html>
