--- a/week 2/3_cascade/2_inheritance.html
+++ b/week 2/3_cascade/2_inheritance.html
@@ -5,6 +5,8 @@
     <style>
       .main {
         color: red;
+        margin-top: 100px;
+        border: 1px solid black;
       }
 
       .special {
