--- a/week 2/5_flexbox/1_flexbox.html
+++ b/week 2/5_flexbox/1_flexbox.html
@@ -34,26 +34,30 @@
       /* Add your flexbox CSS below here */
 
       /* display flex */
-      /* section {
+      section {
         display: flex;
-      } */
+      }
 
       /* mengatur arah flex */
-      /* section {
+      section {
         flex-direction: row;
-      } */
+      }
 
       /* wrapping */
-      /* section {
+      section {
         flex-wrap: wrap;
-      } */
+      }
 
       /* flex grow */
-      /* article{
+      article{
         flex-grow: 1;
         flex-shrink: 1;
         flex-basis: 200px;
-      } */
+      }
+      article:first-child{
+        flex-grow: 8;
+      }
+      
     </style>
   </head>
   <body>
