--- a/week 2/5_flexbox/2_alignment.html
+++ b/week 2/5_flexbox/2_alignment.html
@@ -29,8 +29,8 @@
       /* Add your flexbox CSS below here */
       div {
         display: flex;
-        align-items: center;
-        justify-content:center;
+        align-items: flex-end;
+        justify-content:flex-end;
       }
     </style>
   </head>
