--- a/week 2/4_box model/1_boxmodel.html
+++ b/week 2/4_box model/1_boxmodel.html
@@ -12,7 +12,10 @@
         height: 150px;
       }
 
-      .alternate {
+      .box.alternate {
+        padding: 10px;
+        margin: 0;
+        border: 0;
         box-sizing: border-box;
       }
     </style>
