--- a/week 3/4_penggunaan javascript/index.html
+++ b/week 3/4_penggunaan javascript/index.html
@@ -3,17 +3,13 @@
   <head>
     <title>Penggunaan JavaScript</title>
     <script src="script.js"></script>
-    <script>
-      function myFunction() {
-        alert("Halo dunia!");
-      }
-    </script>
+    
   </head>
   <body>
     <!-- inline -->
-    <button onclick="alert('Halo dunia!')">Klik Saya</button>
+    <!-- <button onclick="alert('Halo dunia!')">Klik Saya</button> -->
 
-    <!-- <button onclick="myFunction()">Klik Saya</button> -->
+    <button onclick="myFunction()">Klik Saya</button>
     
 
   </body>
